# Nova-Graphics-Engine-2

./: CMakeLists.txt  Libs.cmake  brun.sh  gdb.txt  goals.md  imgui.ini  renderer.md  shader.sh  vcpkg.json
cmake/: mingw-w64.cmake
root/app/: CMakeLists.txt
root/app/src/: ex.cppo  main.cpp
root/core/: CMakeLists.txt
root/core/include/: Image.h  ImageSampler.h  buffer.h  camera.h  commandBuffer.h  core.h  cpuf.h  descMan.h  device.h  framesync.h  gbuffer.h  gui.h  layout.h  mesh.h  pipeline.h  renderer.h  sampledImage.h  shader.h  swapchain.h  system.h  texture.h  types.h  ubo.h  uniformBuffer.h
root/core/include/high-level/: graphics.h  object.h  renderer.h
root/core/src/: Image.cpp  buffer.cpp  camera.cpp  commandBuffer.cpp  core.cpp  cpuf.cpp  descMan.cpp  device.cpp  deviceLow.cpp  framesync.cpp  graphics.cpp  gui.cpp  imageSampler.cpp  mesh.cpp  pipeline.cpp  renderer.cpp  sampledImage.cpp  swapchain.cpp  swapchain_low.cpp  system.cpp  texture.cpp
shaders/: common.slang  frag.glsl  frag.slang  frag.spv  vert.glsl  vert.slang  vert.spv
